News UAT/force-app/main/default/objects/CreditAndDebit__c/CreditAndDebit__c.object-meta.xml
<CustomObject>
    <label>Credit and Debit</label>
    <nameField>
        <displayFormat>ADJ{00000000}</displayFormat>
        <label>Adjustment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credits and Debits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>