News UAT/force-app/main/default/objects/CreditAndDebit__c/fields/AdType__c.field-meta.xml
<CustomField>
    <fullName>AdType__c</fullName>
    <label>Ad Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>