News UAT/force-app/main/default/objects/CreditAndDebit__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Adjustment Amount GST Excl</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>