News UAT/force-app/main/default/objects/CreditAndDebit__c/fields/AmountGSTIncl__c.field-meta.xml
<CustomField>
    <fullName>AmountGSTIncl__c</fullName>
    <formula>(1 + $Setup.News_Default_Setting__c.GST_Percentage__c) * Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustment Amount GST Incl</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>