News UAT/force-app/main/default/objects/CreditAndDebit__c/fields/Booking_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Booking_Line_Item__c</fullName>
    <label>Booking Line Item</label>
    <referenceTo>Booking_Line_Item__c</referenceTo>
    <relationshipName>Credits_and_Debits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>