News UAT/force-app/main/default/objects/CreditAndDebit__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>End Run Date</label>
    <type>Date</type>
</CustomField>