News UAT/force-app/main/default/objects/CreditAndDebit__c/fields/RaisedDate__c.field-meta.xml
<CustomField>
    <fullName>RaisedDate__c</fullName>
    <label>Raised Date</label>
    <type>Date</type>
</CustomField>