News UAT/force-app/main/default/objects/CreditAndDebit__c/fields/ReasonCode__c.field-meta.xml
<CustomField>
    <fullName>ReasonCode__c</fullName>
    <label>DRS Reason Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>