News UAT/force-app/main/default/objects/CreditAndDebit__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Start Run Date</label>
    <type>Date</type>
</CustomField>