News UAT/force-app/main/default/objects/CreditAndDebit__c/recordTypes/Credit.recordType-meta.xml
<RecordType>
    <fullName>Credit</fullName>
    <active>true</active>
    <label>Credit</label>
</RecordType>