News UAT/force-app/main/default/objects/CreditAndDebit__c/recordTypes/System_Reprice.recordType-meta.xml
<RecordType>
    <fullName>System_Reprice</fullName>
    <active>true</active>
    <label>System Reprice</label>
</RecordType>